<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ur_robot_driver</name>
  <version>2.0.0</version>
  <description>The updated driver for Universal Robots UR10 robots for TAS project</description>
  <author>Anthony Le</author>
  <maintainer email="anthony.le@bristol.ac.uk">Anthony Le</maintainer>
  <license>Apache-2.0</license>
  <license>BSD-2-Clause</license>
  <license>Zlib</license>

  <url type="website">https://tasfunctionality.bristol.ac.uk/</url>
  <url type="bugtracker">https://github.com/AnthonyLe93/ur_robot_driver/issues</url>
  <url type="repository">https://github.com/AnthonyLe93/ur_robot_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>industrial_robot_status_interface</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>

  <depend>actionlib</depend>
  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>kdl_parser</depend>
  <depend>pass_through_controllers</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>scaled_joint_trajectory_controller</depend>
  <depend>sensor_msgs</depend>
  <depend>speed_scaling_interface</depend>
  <depend>speed_scaling_state_controller</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf</depend>
  <depend>trajectory_msgs</depend>
  <depend>ur_client_library</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_msgs</depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>cartesian_trajectory_controller</exec_depend>
  <exec_depend>controller_stopper</exec_depend>
  <exec_depend>force_torque_sensor_controller</exec_depend>
  <exec_depend>industrial_robot_status_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>socat</exec_depend>
  <exec_depend>twist_controller</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>rostest</test_depend>



  <export>
    <hardware_interface plugin="${prefix}/hardware_interface_plugin.xml" />
    <rosdoc config="doc/rosdoc.yaml" />
  </export>

</package>
